test/Fail/Issue4390irrelevance.err
Issue4390irrelevance.agda:10.28-29: error: [UnequalRelevance]
(.A → A) !=< (A → A) because one is a relevant function type and
the other is an irrelevant function type
when checking that the expression f has type A → A
